# avr-iot-cellular-arduino-library

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CHANGELOG.md  Jenkinsfilek8s  LICENSE.md  README.md  avr-iot-cellular-arduino-firmware.ino  clear_cryptoauthlib.sh  cloudprovider.yaml  flash.sh  http_client.c  http_client.h  inject_cryptoauthlib.sh  library.properties  lte_client.c  lte_client.h  make.sh  mini_port.md  mycoolfile  readme.md  sequans_controller.c  sequans_controller.h  test.cpp  test.h  todo.md
.meta/: main.json
docs/: todo.md  todo.txt
examples/custom_at_commands/: custom_at_commands.ino
examples/debug_modem/: debug_modem.ino
examples/extract_certificates/: extract_certificates.ino
examples/gpio/: gpio.ino
examples/gps_tracker/: gps_tracker.ino
examples/http/: http.ino
examples/http_get_time/: http_get_time.ino
examples/https/: https.ino
examples/https_configure_ca/: https_configure_ca.ino
examples/https_with_header/: https_with_header.ino
examples/mqtt_aws/: mqtt_aws.ino
examples/mqtt_azure/: mqtt_azure.ino
examples/mqtt_custom_broker/: mqtt_custom_broker.ino
examples/mqtt_low_power/: mqtt_low_power.ino
examples/mqtt_password_authentication/: mqtt_password_authentication.ino
examples/mqtt_polling/: mqtt_polling.ino
examples/mqtt_polling_aws/: mqtt_polling_aws.ino
examples/mqtt_provision/: mqtt_provision.ino
examples/mqtt_with_connection_loss_handling/: mqtt_with_connection_loss_handling.ino
examples/plant_monitoring/: plant_monitoring.ino
examples/power_down/: power_down.ino
examples/power_print_voltage/: power_print_voltage.ino
examples/power_save/: power_save.ino
examples/provision/: provision.ino  types.h
examples/sandbox/: sandbox.ino
examples/serial/: serial.ino
examples/sms/: sms.ino
lib/cryptoauth/: CMakeLists.txt  atca_config.h  build.sh
lib/cryptoauth/device-specs/: specs-avr128db48  specs-avr128db64
scripts/: bundle.sh  clear_cryptoauthlib.sh  compile_examples.sh  flash.bat  flash.sh  inject_cryptoauthlib.sh  make.bat  make.sh  update_include_paths.py
scripts/wsl/: flash.sh  make.sh
src/: atca_config.h  cert_def_1_signer.h  ecc608.cpp  ecc608.h  flash_string.h  hal_i2c_driver.cpp  http_client.cpp  http_client.h  led_ctrl.cpp  led_ctrl.h  log.cpp  log.h  low_power.cpp  low_power.h  lte.cpp  lte.h  mqtt_client.cpp  mqtt_client.h  power.cpp  power.h  security_profile.cpp  security_profile.h  sequans_controller.cpp  sequans_controller.h  timeout_timer.cpp  timeout_timer.h
src/cryptoauthlib/: atca_config.h
src/ecc/: ecc_controller.c  ecc_controller.cpp  ecc_controller.h  hal_i2c_driver.cpp
src/ecc608/: ecc608.cpp  ecc608.h
src/log/: log.cpp  log.h
src/lte/: http_client.c  http_client.cpp  http_client.h  lte.cpp  (+8 more)
test/: conftest.py  readme.md  requirements.txt  test.py  test_examples.py  tests.json
(+124 files in other folders)
